# crypto-research-platform

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
src/: backtest.py  data_fetch.py  factors.py  metrics.py  preprocessing.py
